fix(multi-select-options): fix spacing between options

--- a/packages/components/src/MultiSelect/subcomponents/MultiSelectOptionField/MultiSelectOptionField.module.scss
+++ b/packages/components/src/MultiSelect/subcomponents/MultiSelectOptionField/MultiSelectOptionField.module.scss
@@ -27,6 +27,7 @@
 
   &:focus-within {
     &::after {
+      z-index: 2;
       width: calc(100% + 2px);
       height: calc(100% + 2px);
       content: "";
