--- a/packages/components/src/MultiSelect/subcomponents/MultiSelectOptions/MultiSelectOptions.module.scss
+++ b/packages/components/src/MultiSelect/subcomponents/MultiSelectOptions/MultiSelectOptions.module.scss
@@ -3,7 +3,6 @@
 .multiSelectOptions {
   display: flex;
   flex-direction: column;
-  gap: $spacing-4;
   border: none;
   padding: 0;
   margin: 0;
